# digital-signature

./: README.md
projects/: pyproject.toml
projects/my_project/: db.sqlite3
projects/my_project/certs/: certificate.p12  certificate.pem  private_key.pem
projects/my_project/my_app/: admin.py  forms.py  models.py  urls.py  views.py
projects/my_project/my_app/migrations/: 0001_initial.py
projects/my_project/my_app/templates/: upload_pdf.html
projects/my_project/my_project/: settings.py  urls.py
