[tool.poetry]
name = "pojects"
version = "0.1.0"
description = ""
authors = ["aakansha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
pyhanko = "^0.25.3"
cryptography = "^44.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
